namespaces/live.cloud-platform.service.justice.gov.uk/laa-data-claims-notify-service-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-data-claims-notify-service-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-data-stewardship-payments"
    cloud-platform.justice.gov.uk/application: "LAA Data Claims Notify Service"
    cloud-platform.justice.gov.uk/owner: "Controlled Work Claims: controlledworkclaims@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-data-claims-notify-service"
    cloud-platform.justice.gov.uk/team-name: "laa-amend-a-claim"
    cloud-platform.justice.gov.uk/review-after: ""
